[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-tui"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "httpx>=0.25.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
ha-tui = "ha_tui.main:main"
